compiler/typ/tests/fixtures/diagnostics/0076_core_annotated_value_mismatch_07.ml.infer.expected
File "0076_core_annotated_value_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0076_core_annotated_value_mismatch_07 is not a valid module name.

File "0076_core_annotated_value_mismatch_07.ml", line 1, characters 16-21:
1 | let eta : int = false
                    ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
